# custom-app

./: .gitignore  README.md  pyproject.toml
customization_manager/: hooks.py  modules.txt
customization_manager/config/: desktop.py  docs.py
customization_manager/customization_manager/doctype/customization_sync/: customization_sync.js  customization_sync.json  customization_sync.py  test_customization_sync.py
customization_manager/customization_manager/doctype/customization_sync_filter/: customization_sync_filter.json  customization_sync_filter.py
customization_manager/customization_manager/doctype/test/: test.js  test.json  test.py  test_test.py
customization_manager/fixtures/: client_script.json
